# cellmate

./: .gitignore  README.md  pyproject.toml
cellmate/: __init__.py  background.js  blocked.html  blocked.js  edit.html  edit.js  llmClient.js  manifest.json  policyEngine.js  popup.css  popup.html  popup.js  prediction.html  prediction.js  settings.html  settings.js
cellmate/DNR_enforcer/: background.js
cellmate/interface/: __init__.py  interface.py
cellmate/policy/: __init__.py  policy.py  policy_test.py  sitemap.py  state.py
cellmate/resources/: index.json
cellmate/resources/gitlab.com/rules/: api.json  index.json  read_api.json  read_project.json  read_project_deploy_token.json  read_repository.json  read_user.json  read_user_key.json  (+4 more)
examples/amazon/: test.py
examples/amazon/extension/: background.js  content.js  manifest.json
examples/amazon/resource/: README.md  sitemap.json
examples/gitlab/: bua.py  bua_cellmate.py
examples/gitlab/actions/: crawl_actions_and_rest_apis.ipynb  gitlab_actions.ipynb  gitlab_deploy_keys_and_tokens.json  gitlab_issue_notes.json  gitlab_issues.json  gitlab_members.json  gitlab_project_export_import.json  gitlab_project_webhooks.json  gitlab_projects.json  gitlab_repositories.json  gitlab_user_keys.json  gitlab_user_tokens.json  gitlab_users.json
examples/gitlab/adv_server/: adv_client.html  server.py
examples/gitlab/browser_use/: bua.py  bua_cellmate.py
legacy/cellmate/DNR_enforcer/: manifest.json
legacy/cellmate/interface/: interface.py
legacy/cellmate/policy/: README.md  policy_test.py  sitemap.py
(+14 files in other folders)
